run code cleanup, only include SelectBaseLayout.js in builds for 8.0+

--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -3,7 +3,7 @@
     <standardValues>
       <patch:attribute name="defaultProvider" value="baseLayouts" />
       <providers>
-        <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts"/>
+        <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts" />
         <!-- Example for how to wrap another standard values provider
         <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
           <param name="innerProvider" type="Sitecore.Data.StandardValuesProvider, Sitecore.Kernel" />
@@ -12,7 +12,8 @@
       </providers>
     </standardValues>
     <commands>
-      <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts" />
+      <command name="webedit:selectbaselayout"
+               type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts" />
     </commands>
     <pipelines>
       <getBaseLayoutItems>
@@ -22,16 +23,19 @@
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForCircularReference, Sitecore.BaseLayouts">
           <param name="validator" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts" />
         </processor>
-        <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForVersioningConflict, Sitecore.BaseLayouts">
+        <processor
+          type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForVersioningConflict, Sitecore.BaseLayouts">
           <param name="validator" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts" />
         </processor>
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.SaveNewBaseLayout, Sitecore.BaseLayouts" />
       </saveBaseLayout>
     </pipelines>
     <sitecore.experienceeditor.speak.requests>
-      <request name="BaseLayouts.CanExecute" type="Sitecore.BaseLayouts.Commands.CanExecute, Sitecore.BaseLayouts"/>
-      <request name="BaseLayouts.GetDialogUrl" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.GetDialogUrl, Sitecore.BaseLayouts"/>
-      <request name="BaseLayouts.Execute" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.Execute, Sitecore.BaseLayouts"/>
+      <request name="BaseLayouts.CanExecute" type="Sitecore.BaseLayouts.Commands.CanExecute, Sitecore.BaseLayouts" />
+      <request name="BaseLayouts.GetDialogUrl"
+               type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.GetDialogUrl, Sitecore.BaseLayouts" />
+      <request name="BaseLayouts.Execute"
+               type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.Execute, Sitecore.BaseLayouts" />
     </sitecore.experienceeditor.speak.requests>
   </sitecore>
 </configuration>
