--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="..\BuildConfigurations.proj" />
   <PropertyGroup>
@@ -22,21 +21,20 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <TypeScriptToolsVersion>1.5</TypeScriptToolsVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Sitecore.Client">
-      <HintPath>$(SitecorePath)Sitecore.Client.dll</HintPath>
+      <HintPath>$(SitecorePath)\Sitecore.Client.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.ExperienceEditor" Condition="$(SitecoreVersionNumber) &gt;= 8.0">
-      <HintPath>$(SitecorePath)Sitecore.ExperienceEditor.dll</HintPath>
+      <HintPath>$(SitecorePath)\Sitecore.ExperienceEditor.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.ExperienceEditor.Speak" Condition="$(SitecoreVersionNumber) &gt;= 8.0">
-      <HintPath>$(SitecorePath)Sitecore.ExperienceEditor.Speak.dll</HintPath>
+      <HintPath>$(SitecorePath)\Sitecore.ExperienceEditor.Speak.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Kernel">
-      <HintPath>$(SitecorePath)Sitecore.Kernel.dll</HintPath>
+      <HintPath>$(SitecorePath)\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -106,14 +104,14 @@
     <Content Include="sitecore modules\shell\BaseLayouts\Commands\SelectBaseLayout.js" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\BaseLayouts.config">
-      <SubType>Designer</SubType>
-      <TransformOnBuild>true</TransformOnBuild>
-    </Content>
     <Content Include="sitecore\shell\client\Sitecore\ExperienceEditor\ExperienceEditor.js" Condition="$(SitecoreVersionNumber) == 8.0" />
     <Content Include="sitecore modules\shell\BaseLayouts\SelectBaseLayout.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Config\Include\BaseLayouts.config">
+      <SubType>Designer</SubType>
+      <TransformOnBuild>true</TransformOnBuild>
+    </Content>
     <None Include="App_Config\Include\BaseLayouts.Debug.config">
       <DependentUpon>BaseLayouts.config</DependentUpon>
       <IsTransformFile>True</IsTransformFile>
@@ -147,7 +145,6 @@
     <SlowCheetahTargets Condition=" '$(SlowCheetah_EnableImportFromNuGet)'=='true' and Exists('$(SlowCheetah_NuGetImportPath)') ">$(SlowCheetah_NuGetImportPath)</SlowCheetahTargets>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
