--- a/Sitecore.BaseLayouts.Tests/Sitecore.BaseLayouts.Tests.csproj
+++ b/Sitecore.BaseLayouts.Tests/Sitecore.BaseLayouts.Tests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Caching\LayoutValueCacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectBaseLayoutFormTests.cs" />
+    <Compile Include="TestUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
